# UNIX-shell

./: CMakeLists.txt  Makefile  README.md
src/: main.c
src/datastructures/: linked_list.c  linked_list.h  string.c  string.h
src/handlers/command/: command_handler.c  command_handler.h
src/handlers/error/: error_handler.c  error_handler.h
src/handlers/file/: file_handler.c  file_handler.h
src/parser/: command_parser.c  command_parser.h  pre_parser.c  pre_parser.h
src/system/: commands.c  commands.h  process.c  process.h
src/variables/: environment.c  environment.h  shell_variables.c  shell_variables.h
